--- a/redux-app/.env
+++ b/redux-app/.env
@@ -1,1 +1,1 @@
-URL='http://api.icndb.com/jokes/random?limitTo=[explicit]&firstName=Matt&lastName=Emrich'
+URL=http://api.icndb.com/jokes/random?limitTo=[explicit]&firstName=Matt&lastName=Emrich
